--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "@expo/vector-icons": "^9.0.0",
     "expo": "^32.0.0",
     "firebase": "^5.8.4",
-    "native-base": "^2.12.0",
+    "latlon-geohash": "^1.1.0",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-card-stack-swiper": "^1.1.0",
     "react-native-elements": "^1.0.0",
     "react-native-fbsdk": "^0.8.0",
     "react-native-fontawesome": "^6.0.1",
-    "react-navigation": "^3.2.3"
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-gifted-chat": "^0.7.3",
+    "react-native-swipe-cards": "^0.1.1",
+    "react-navigation": "^3.2.3",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
