--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "width": "deviceWidth"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
