--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/samples": "2.1.1",
-    "@expo/vector-icons": "^9.0.0",
+    "euclidean-distance": "^1.0.0",
     "expo": "^32.0.0",
     "firebase": "^5.8.4",
+    "latlon-geohash": "^1.1.0",
+    "lodash": "^4.17.11",
     "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-card-stack-swiper": "^1.1.0",
-    "react-native-elements": "^1.0.0",
     "react-native-fbsdk": "^0.8.0",
     "react-native-fontawesome": "^6.0.1",
-    "react-navigation": "^3.2.3"
+    "react-native-gifted-chat": "^0.7.3",
+    "react-native-swipe-cards": "^0.1.1",
+    "react-navigation": "^3.6.1",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0"
+    "babel-preset-expo": "^5.0.0"
   },
   "private": true
 }
